--- a/css/style.css
+++ b/css/style.css
@@ -579,16 +579,23 @@ p.subscribe-to-comments {
 #img_Favorite { position:absolute; top: 234px; left: 20px; width:38px; height:38px; z-index: 2;  opacity: 0.5;}
 
 
-#facebook-share:hover { opacity: 1; }
+
+#img_Facebook:hover { opacity: 1; }
 #img_Twitter:hover { opacity: 1; }
 #img_Pintrest:hover { opacity: 1; }
 #img_Favorite:hover { opacity: 1; }
 
-#image-link { position:absolute; top:0px; left: 0px; width:318px; height:318px;  z-index: 4; }
-#facebook-share { position:absolute; top: 120px; left: 20px; width:38px; height:38px; z-index: 5; }
-#twitter-share { position:absolute; top: 158px; left: 20px; width:38px; height:38px; z-index: 5; }
-#pintrest-share { position:absolute; top: 196px; left: 20px; width:38px; height:38px; z-index: 5; }
+#image-link {  top:0px; left: 0px; width:318px; height:318px;  z-index: 4; }
+#facebook-share {  top: 120px; left: 20px; width:38px; height:38px; z-index: 5; }
+#twitter-share {  top: 158px; left: 20px; width:38px; height:38px; z-index: 5; }
+#pintrest-share { top: 196px; left: 20px; width:38px; height:38px; z-index: 5; }
 
+.likes{
+	position: absolute;
+    z-index: 999;
+    top: 234px;
+    left: 20px;
+}
 
 /* Featured Post Grid
 ------------------------------------------------------------ */
