--- a/css/style.css
+++ b/css/style.css
@@ -527,7 +527,11 @@ border-bottom: 0;
 	padding: 10px 60px 20px 60px;
 
 }
-
+#aboutContent {
+	overflow: hidden;
+	padding: 10px 60px 20px 60px;
+	display: none;
+}
 .about-content {
 	overflow: hidden;
 	padding: 10px 10px 20px 10px;
@@ -592,9 +596,9 @@ p.subscribe-to-comments {
 
 .likes{
 	position: absolute;
-    z-index: 999;
-    top: 234px;
-    left: 20px;
+    z-index: 9;
+    top: 245px;
+    left: 35px;
 }
 
 /* Featured Post Grid
